# audio-extraction-analysis

./: .architecture_baseline.json  .env.example  .gitignore  .import-linter.ini  .pre-commit-config.yaml  .secrets.baseline  GETTING_STARTED.md  LICENSE  README-PRODUCTION.md  README.md  TECHNICAL_DEBT_ANALYSIS.md  benchmark_hash_cache.py  coverage.json  pyproject.toml  requirements-core.txt  requirements-production.txt  setup.py  test_diskcache_wal.py  verify_streaming.py
.github/workflows/: ci.yml  e2e-testing.yml  release.yml  static_checks.yml
.sugar/: claude_input.json  config.yaml  context_session.json  sugar.db  sugar.pid
benchmarks/: cache_benchmark.py
data/: README.md
data/input/: .gitkeep
examples/: README.md  parakeet_example.py  test_parakeet.py
reports/: technical_debt_register.csv
scripts/: analyze_dependencies.py  full_integration_test.sh  quick_test.sh  run_comprehensive_tests.py  run_e2e_local.sh  run_static_checks.sh  security_check.py
src/: __init__.py  cli.py
src/analysis/: __init__.py  concise_analyzer.py  full_analyzer.py
src/cache/: __init__.py  backends.py  common.py  compression.py  eviction.py  transcription_cache.py
src/commands/: __init__.py  cli_utils.py  export_markdown_command.py  extract_command.py  process_command.py  transcribe_command.py
src/config/: __init__.py  base.py  config.py  factory.py  performance.py  production.py  secure_config.py  security.py  ui.py  validation.py
src/error_coordination/: __init__.py  config.py
src/formatters/: __init__.py  markdown_formatter.py  templates.py
src/models/: __init__.py  transcription.py
src/orchestration/: __init__.py  executor.py  state_manager.py  templates.py  workflow.py
src/pipeline/: __init__.py  audio_pipeline.py  simple_pipeline.py
src/providers/: __init__.py  base.py  deepgram.py  deepgram_utils.py  elevenlabs.py  factory.py  parakeet.py  parakeet_audio.py  parakeet_cache.py  parakeet_core.py  parakeet_gpu.py  provider_utils.py  whisper.py
src/services/: __init__.py  audio_extraction.py  audio_extraction_async.py  ffmpeg_core.py  transcription.py
src/ui/: __init__.py  console.py
src/utils/: __init__.py  common_validation.py  ffmpeg_utils.py  file_validation.py  logger.py  logging_factory.py  paths.py  retry.py  sanitization.py  secure_temp.py  validation.py
tests/: cache_functionality_test.py  conftest.py  security_fix_test.py  test_security.py
tests/cache/: benchmark_eviction.py  test_benchmark_hash_cache.py  test_cache_benchmark.py  test_cache_contracts.py  test_eviction.py  test_file_hash_cache.py
tests/e2e/: README.md  __init__.py  base.py  config.toml  (+8 more)
(+54 files in other folders)
